@@ -1,5 +1,6 @@
 <div id="manager-actions">
     <span>{translate(#Action#)}: &nbsp;</span>
+    <a class="action reorder" href="{makeUrl(#detect#,#module#,#default#)}">Detect New Modules</a>
     <a class="action add" href="{makeUrl(#add#,#module#,#default#)}">{translate(#Add#)}</a>
 </div>
 <div id="content">
