@@ -1,0 +1,41 @@
+<fieldset class="inside">
+    {if:isEqual(mode,#detect#)}
+        <p>
+            <label for="module[{k}][register]">{translate(#Register this module?#)}</label>
+            <input type="checkbox" name="module[{k}][register]" id="module[{k}][register]"  />
+        </p>
+    {end:}
+    <p>
+        <label class="tipOwner" for="module[{k}][name]">{translate(#Name#)}
+            <span class="tipText">{translate(#The name of the module must be the exact name of the folder containing files, beware of case sensiveness#)}</span>
+        </label>
+        <span class="error" flexy:if="error[name]">{translate(error[name])}</span>
+        <input type="text" class="text" name="module[{k}][name]" id="module[{k}][name]" value="{module.name}" />
+    </p>
+    <p>
+        <label class="tipOwner" for="module[{k}][title]">{translate(#Title#)}
+            <span class="tipText">{translate(#Here you can write what you want#)}</span>
+        </label>
+        <span class="error" flexy:if="error[title]">{translate(error[title])}</span>
+        <input type="text" class="text" name="module[{k}][title]" id="module[{k}][title]" value="{module.title}" />
+    </p>
+    <p>
+        <label for="module[{k}][is_configurable]">{translate(#Configurable#)}</label>
+        <input type="checkbox" name="module[{k}][is_configurable]" id="module[{k}][is_configurable]"  flexy:ignore flexy:raw="{isConfigurable}" />
+    </p>
+    <p>
+        <label for="module[{k}][description]">{translate(#Description#)}</label>
+        <span class="error" flexy:if="error[description]">{translate(error[description])}</span>
+        <input type="text" name="module[{k}][description]" id="module[{k}][description]" value="{module.description}" />
+    </p>
+    <p>
+        <label for="module[{k}][admin_uri]">{translate(#Admin URI#)}</label>
+        <span class="error" flexy:if="error[admin_uri]">{translate(error[admin_uri])}</span>
+        <input type="text" class="text" name="module[{k}][admin_uri]" id="module[{k}][admin_uri]" value="{module.name}" />
+    </p>
+    <p>
+        <label for="module[{k}][icon]">{translate(#Icon#)}</label>
+        <span class="error" flexy:if="error[icon]">{translate(error[icon])}</span>
+        <input type="text" class="text" name="module[{k}][icon]" id="module[{k}][icon]" value="{module.icon}" />
+    </p>
+</fieldset>
